fix css for blog view on mobile device (#113)
* fix css for blog view on mobile device


* additional fix to css

--- a/site/themes/getenvoy/static/css/main.css
+++ b/site/themes/getenvoy/static/css/main.css
@@ -810,22 +810,23 @@ nav.menu > .pop-toggle{
 		display:none;
 	}
 
-.single-box > .body.single::before,
- #main > .single-box > nav {
-	 display:none !important;
- }
- #main > .single-box > .body.single {
-	 border:none;
-	 padding:2rem 0;
- }
- body #menu > nav.menu a.home{
-    padding: .5rem 0;
-    height: 4rem;
- }
- body #menu > nav.menu a.home::after, body #menu > nav.menu a.home::before{
-    background-size: auto 100%;
-    background-position: left;
- }
+	.single-box > .body.single::before,
+	#main > .single-box > nav {
+		display:none !important;
+	}
+	#main > .single-box > .body.single {
+		border: none;
+		padding: 2rem 0;
+		width: 100% !important;
+	}
+	body #menu > nav.menu a.home{
+		padding: .5rem 0;
+		height: 4rem;
+	}
+	body #menu > nav.menu a.home::after, body #menu > nav.menu a.home::before{
+		background-size: auto 100%;
+		background-position: left;
+	}
 }
 
 .body.list article{ margin-bottom: 3rem;}
@@ -899,7 +900,7 @@ nav.menu > .pop-toggle{
 
 .single-box > nav ul > li > a {padding:.5rem 1rem; display: block; border:none; color:#8bc; text-align: left; text-transform: none;}
 .single-box > .body.single {
-	z-border-left:6px solid #008fd1;
+	/*z-border-left:6px solid #008fd1;*/
 	/*width:100%;*/
 	width: 65%;
 	position: relative;
@@ -1028,43 +1029,16 @@ article.repo > ul > li {
 	left:-1rem;
 }
 
+.content {
+	padding: 0 32px;
+}
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
- .content {
-   padding: 0 32px;
- }
- 
- :root {
-   --mdc-theme-primary: #000;
-   --mdc-theme-secondary: #666;
-   --mdc-theme-on-primary: #fff;
-   --mdc-theme-on-secondary: #fff;
- }
+:root {
+	--mdc-theme-primary: #000;
+	--mdc-theme-secondary: #666;
+	--mdc-theme-on-primary: #fff;
+	--mdc-theme-on-secondary: #fff;
+}
 
 
 /* Reset */
@@ -2209,6 +2183,14 @@ article.repo > ul > li {
 			margin-left: 8.33333%;
 		}
 
+		body.kind-page #main, body.kind-section #main {
+			padding: 4em 0 0 0;
+		}
+
+		body.kind-home #main {
+			padding: 6em 4em;
+		}
+
 	}
 
 	@media screen and (max-width: 736px) {
@@ -2422,6 +2404,10 @@ article.repo > ul > li {
 
 		.\-1u\28small\29 {
 			margin-left: 8.33333%;
+		}
+
+		body.kind-page #main, body.kind-section #main, body.kind-home #main {
+			padding: 2.25em 1.5em 0.25em 1.5em;
 		}
 
 	}
